| Summary: | ASTERISK-26265: Errors ignored from some parts of system initialization. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2016-08-03 15:37:25 | Date Closed: | 2016-08-04 09:11:21 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 11.23.0 13.10.0 14.0.0-beta1 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | A few initialization have allocations that must succeed or it will later cause a segmentation fault. We need to check for these situations and exit with an error code during startup.
* channel.c: ast_channels_init * config_options.c: aco_init * format.c: ast_format_attr_init and ast_format_list_init (v11 only) | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-08-03 15:37:26.311-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||